--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A basic stater boilerplate project for node",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon src/index.js"
+    "dev": "npx nodemon --legacy-watch src/index.js"
   },
   "author": "Aadarsh Keshri",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
@@ -17,7 +17,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.3.3",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.32.0",
     "sequelize-cli": "^6.6.0",
     "winston": "^3.9.0"
